# word_clock

./: Cargo.toml
.cargo/: config
led-time/: Cargo.toml  run_on_pi.sh
led-time/src/: main.rs
print-time/: Cargo.toml
print-time/src/: main.rs
word_clock_fr/: Cargo.toml
word_clock_fr/src/: lib.rs
